release-baidu/v4.1.0/不懂如何安装请读.md
# fcitx5-android-t9-phone

安卓企鹅输入法魔改成支持物理九键键盘的智能安卓机 / 老人机，对其他输入方式的支持可能有 bug。

## 下载

从网盘下载以下文件（先确认手机是 32 位还是 64 位）：

- 如果是 **64 位手机（arm64-v8a）**，下载这三个文件：
  - `org.fcitx.fcitx5.android-4.1.0-arm64-v8a-release.apk`
  - `org.fcitx.fcitx5.android.plugin.rime-4.1.0-arm64-v8a-release.apk`
  - `rime-ice-t9-phone-main.zip`

- 如果是 **32 位手机（armeabi-v7a）**，下载这三个文件：
  - `org.fcitx.fcitx5.android-4.1.0-armeabi-v7a-release.apk`
  - `org.fcitx.fcitx5.android.plugin.rime-4.1.0-armeabi-v7a-release.apk`
  - `rime-ice-t9-phone-main.zip`

> 说明：`rime-ice-t9-phone-main.zip` 是雾凇拼音 / 九键配置文件，32 位和 64 位都用同一个压缩包。

## 安装方法

- 在手机上安装下载下来的 APK：输入法本体和 rime 插件。

- 打开输入法本体，按照 App 显示的要求启用输入法。

- 在输入法设置里进行一下操作：

  - 【插件】查看相应的 rime 插件有无被检测到。
  - 【附加组件】查看中州韵有无被勾选，需被勾选。
  - 【输入法】点右下角的添加，添加中州韵。可以按右上角的编辑删掉 English 和拼音输入法。

- 进入一个能输入文本的地方，打开输入法，点输入法上方的【⋯】打开快捷设置。

- 在快捷设置里找到词库切换，点开这个词库切换，选择【重新部署】。【必做】这一步会创建后面要导入文件的 rime 数据目录。

- 把 `rime-ice-t9-phone-main.zip` 解压，并把里面的 **所有文件和文件夹** 导进安卓手机里的文件夹：

  `Android/data/org.fcitx.fcitx5.android/files/data/rime`

  如果没有这个文件夹，通常是忘记提前先做一次【重新部署】。

- 再次进入一个能输入文本的地方，打开输入法，点【⋯】打开快捷设置，点开同一个词库切换 / Rime 状态项，选择【同步】。

- 等待完成后，点开后选择中文九键模式。

- 恭喜你可以用了！

## 新功能

- 新增【智能英语】模式：可以在输入法上方【⋯】快捷设置里和普通英文九键相互切换。
- 智能英语内置更完整的英文 T9 词库，按数字序列可以预测英文单词，候选区显示完整预测词，上方输入行显示当前实际输入进度。
- 智能英语支持从实际输入中学习新单词：在普通英文九键里输入连续英文单词后，用空格、标点或回车结束，单词会进入本地学习词库；之后切回智能英语并输入对应数字序列即可看到候选。
- 设置首页新增【词库管理】入口，可在【智能英语学习词库】里添加、编辑或删除误学的验证码、错词、人名、术语和特殊词。密码输入框和声明不允许个性化学习的输入框不会记录新词。

## 4.0.0 新功能

- 新增【密码模式】：在输入法上方【⋯】快捷设置里可以手动开启；遇到密码框时也会尽量自动进入。密码模式会显示数字行、全键盘字母和常用符号，适合输入密码、验证码、邮箱和账号。
- 密码模式有输入预览。有些 App 不会把密码框顶到输入法上方，现在输入法自己会显示本次键入内容。这个功能默认开启，可以在设置里关闭。
- 密码模式有窥探模式。按住眼睛图标时会临时收起键盘主体，方便看被键盘挡住的密码框、验证码图片或页面提示；松开后立即恢复。
- 按键音重做：默认提供一套内置备用按键音；如果想用百度输入法皮肤里的按键音，需要自己准备百度输入法 Android `.bds` 皮肤文件，并在按键音包管理里手动导入。导入后可以切换、改名、删除和预览；原来的下载文件可以删除。加密或不包含可提取按键音的 `.bds` 皮肤无法使用。

## 九键键盘使用逻辑

### 中文模式

| 按键 | 短按内容 | 长按内容 |
| --- | --- | --- |
| **1键** | 无拼音时打开符号候选；有拼音时插入拼音分词符号 `'` | 无拼音时输入数字 1；有拼音时选择第 1 个汉字候选 |
| **2键** | ABC | 无拼音时输入数字 2；有拼音时选择第 2 个汉字候选 |
| **3键** | DEF | 无拼音时输入数字 3；有拼音时选择第 3 个汉字候选 |
| **4键** | GHI | 无拼音时输入数字 4；有拼音时选择第 4 个汉字候选 |
| **5键** | JKL | 无拼音时输入数字 5；有拼音时选择第 5 个汉字候选 |
| **6键** | MNO | 无拼音时输入数字 6；有拼音时选择第 6 个汉字候选 |
| **7键** | PQRS | 无拼音时输入数字 7；有拼音时选择第 7 个汉字候选 |
| **8键** | TUV | 无拼音时输入数字 8；有拼音时选择第 8 个汉字候选 |
| **9键** | WXYZ | 无拼音时输入数字 9；有拼音时选择第 9 个汉字候选 |
| ***键** | * / 符号候选时切换中英文符号 | 无 |
| **0键** | 无拼音时空格；有拼音时确认当前候选 | 无拼音时输入数字 0；有拼音时选择第 10 个汉字候选 |
| **#键** | 回车 / 搜索 | 切换模式（中文/英文/数字） |

### 英文模式

普通英文九键使用 multi-tap 输入。需要预测英文单词时，可以在输入法上方【⋯】快捷设置里切换到【智能英语】。智能英语使用英文 T9 词库，确认键可以提交当前候选，左右键可移动候选，长按数字键可快捷选择对应候选。需要补充新词时，先关闭【智能英语】，用普通英文九键打出连续英文单词，再按空格、标点或回车结束；之后切回【智能英语】输入对应数字序列即可看到候选。误学的词可以在设置首页【词库管理】->【智能英语学习词库】里删除或修改。

| 按键 | 短按 | 长按 |
| --- | --- | --- |
| **1键** | 常用标点符号 | 数字 1 |
| **2键** | ABC | 数字 2 |
| **3键** | DEF | 数字 3 |
| **4键** | GHI | 数字 4 |
| **5键** | JKL | 数字 5 |
| **6键** | MNO | 数字 6 |
| **7键** | PQRS | 数字 7 |
| **8键** | TUV | 数字 8 |
| **9键** | WXYZ | 数字 9 |
| ***键** | **Shift** | **锁定大写 (Caps Lock)** |
| **0键** | 空格 | 数字 0 |
| **#键** | 回车 / 搜索 | 切换模式（中文/英文/数字） |

### 数字模式

| 按键 | 短按内容 | 长按内容 |
| --- | --- | --- |
| **1键** | **1** | `-` |
| **2键** | **2** | `+` |
| **3键** | **3** | `=` |
| **4键** | **4** | `π` |
| **5键** | **5** | `/` |
| **6键** | **6** | `≈` |
| **7键** | **7** | `(` |
| **8键** | **8** | `%` |
| **9键** | **9** | `)` |
| ***键** | * | 显示运算符快捷提示 |
| **0键** | **0** | `.` |
| **#键** | 回车 / 搜索 | 切换模式（中文/英文/数字） |

## 项目进度

### 支持模式

- 中文九键模式
- 英文模式（multi-tap 输入、Shift、Caps Lock）
- 智能英语模式（英文 T9 预测、词库候选、普通英文九键学习新词、学习词库管理）
- 数字模式（数字输入、常用运算符、简单计算结果）
- 物理按键选区模式
- 中文/英文模式长按输入数字
- 原本输入法已支持繁体切换

### 添加魔改的功能

- 九键按键映射
- 屏幕键盘在使用时常驻，只保留了必要的补充功能
- 中文模式支持拼音预测、拼音筛选栏、汉字候选快捷选择和符号候选
- 智能英语模式支持英文 T9 预测、更完整的英文词库、普通英文九键学习新词和学习词库管理
- 非文本输入场景支持物理按键透传，避免游戏 / 模拟器键位映射被输入法拦截
- 数字模式支持常用运算符和简单计算结果
- 长按 OK/确认键进入选区模式，可用物理方向键选择文本并复制、剪切、粘贴、删除
- 密码模式支持全键盘、数字行、输入预览和按住窥探
- 支持屏幕键和实体键按键音、内置默认音、百度输入法 Android `.bds` 皮肤按键音手动导入、按键音包改名 / 切换 / 删除和按键音预览
- 输入面板顶部圆角、候选浮窗阴影和快捷设置显示经过适配
